# ETVR-Backend

./: .gitattributes  .gitignore  .releaserc  CHANGELOG.md  Dockerfile  ETVR.spec  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE-SUMMER  Makefile  README.md  build.py  docker-compose.debug.yml  docker-compose.yml  flake.nix  pyproject.toml
.devcontainer/: devcontainer.json
.github/scripts/: .releaserc  prepareCMD.sh
.github/workflows/: build.yml  lint.yml
TrackingBackend/: main.py  tracker-config.json
TrackingBackend/app/: __init__.py  camera.py  config.py  etvr.py  eye_processor.py  logger.py  mdns.py  osc.py  tracker.py  types.py  visualizer.py
TrackingBackend/app/algorithms/: __init__.py  ahsf.py  blob.py  hsf.py  hsrac.py  leap.py  ransac.py
TrackingBackend/app/config/: __init__.py  algorithm_config.py  camera_config.py  etvr_config.py  osc_config.py
TrackingBackend/app/processes/: camera.py  eye_processor.py  osc.py
TrackingBackend/app/utils/: __init__.py  image_utils.py  misc.py  misc_utils.py  one_euro_filter.py  process.py
TrackingBackend/assets/: thunder-collection_EyeTrackVR.json
TrackingBackend/tests/: __init__.py  test_config.py  test_logger.py  test_util.py
eyetrackvr_backend/: __init__.py  __main__.py  config.py  etvr.py  logger.py  tracker.py  visualizer.py  window.py
eyetrackvr_backend/algorithms/: ahsf.py  blob.py  hsf.py  hsrac.py  leap.py  ransac.py
eyetrackvr_backend/assets/: __init__.py  index.html
eyetrackvr_backend/assets/images/: __init__.py
eyetrackvr_backend/assets/models/: __init__.py
eyetrackvr_backend/processes/: __init__.py  camera.py  eye_processor.py  osc.py
eyetrackvr_backend/utils/: __init__.py  image_utils.py  misc_utils.py  one_euro_filter.py  process.py
scripts/: setup.sh
tests/: __init__.py  test_config.py  test_logger.py  test_util.py
