[tool.poetry]
name = "EyeTrackVR"
version = "0.2.0"
description = "Opensource, affordable VR eye tracker for VRChat"
authors = [
    "RedHawk989 <48768484+RedHawk989@users.noreply.github.com>",
    "ShyAssassin <49711232+ShyAssassin@users.noreply.github.com>"
]
license = "MIT"
repository = "https://github.com/RedHawk989/EyeTrackVR"

[tool.poetry.dependencies]
python = "~3.10.0"
python-osc = "^1.8.1"
opencv-python = "^4.6.0.66"
numpy = "^1.23.5"
pye3d = "^0.3.1.post1"
pydantic = "^1.10.2"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
zeroconf = "^0.38.4"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.6.2"
bandit = "^1.7.4"
black = "^22.10.0"
pytest = "^7.2.0"
pycallgraph2 = "^1.1.3"
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 135
exclude = "(.git|.env|venv|.venv|build|dist|.vscode|.idea|__pycache__|.ruff_cache)"
target-version = ["py310","py311"]

[tool.ruff]
src = ["TrackingBackend", "test"]
respect-gitignore = true
target-version = "py310"
# format = "grouped"
tab-size = 4
exclude = [
    "__pycache__",
    ".ruff_cache",
    ".vscode",
    ".idea",
    ".venv",
    "build",
    "dist",
    ".git",
    ".env",
    "venv",
]
line-length = 135

[tool.ruff.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401"]

[tool.bandit]
exclude = [
    "__pycache__",
    ".ruff_cache",
    ".vscode",
    ".idea",
    ".venv",
    "build",
    "dist",
    ".git",
    ".env",
    "venv",
]