[tool]
[tool.poetry]
name = "EyeTrackVR"
version = "0.2.0"
description = "Opensource, affordable VR eye tracker for VRChat"
authors = ["RedHawk989 <48768484+RedHawk989@users.noreply.github.com>", "ShyAssassin <49711232+ShyAssassin@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/RedHawk989/EyeTrackVR"

[tool.poetry.dependencies]
python = "~3.10.0"
python-osc = "^1.8.1"
opencv-python = "^4.8.0.74"
numpy = "^1.23.5"
pye3d = "^0.3.1.post1"
pydantic = "^2.0.3"
fastapi = "^0.100.0"
uvicorn = "^0.20.0"
zeroconf = "^0.38.4"
coloredlogs = "^15.0.1"
colorama = "^0.4.6"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.6.2"
black = "^22.10.0"
pytest = "^7.2.0"
ruff = "^0.0.275"
viztracer = "^0.15.6"

[tool.black]
line-length = 135
exclude = "(.git|.env|venv|.venv|build|dist|.vscode|.idea|__pycache__|.ruff_cache)"
target-version = ["py310", "py311"]

[tool.ruff]
select = ["E", "F", "W", "Q"]
src = ["TrackingBackend", "test"]
respect-gitignore = true
target-version = "py310"
format = "grouped"
tab-size = 4
exclude = ["__pycache__", ".ruff_cache", ".vscode", ".idea", ".venv", "build", "dist", ".git", ".env", "venv"]
line-length = 135

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[package]
version = "1.0.0"
